Got rid of JNR